@@ -58,6 +58,14 @@
         'ů': 'u', 'ž': 'z', 'Č': 'C', 'Ď': 'D', 'Ě': 'E', 'Ň': 'N', 'Ř': 'R',
         'Š': 'S', 'Ť': 'T', 'Ů': 'U', 'Ž': 'Z'
     };
+    var SLOVAK_MAP = {
+        'á': 'a', 'ä': 'a', 'č': 'c', 'ď': 'd', 'é': 'e', 'í': 'i', 'ľ': 'l',
+        'ĺ': 'l', 'ň': 'n', 'ó': 'o', 'ô': 'o', 'ŕ': 'r', 'š': 's', 'ť': 't',
+        'ú': 'u', 'ý': 'y', 'ž': 'z',
+        'Á': 'a', 'Ä': 'A', 'Č': 'C', 'Ď': 'D', 'É': 'E', 'Í': 'I', 'Ľ': 'L',
+        'Ĺ': 'L', 'Ň': 'N', 'Ó': 'O', 'Ô': 'O', 'Ŕ': 'R', 'Š': 'S', 'Ť': 'T',
+        'Ú': 'U', 'Ý': 'Y', 'Ž': 'Z'
+    };
     var POLISH_MAP = {
         'ą': 'a', 'ć': 'c', 'ę': 'e', 'ł': 'l', 'ń': 'n', 'ó': 'o', 'ś': 's',
         'ź': 'z', 'ż': 'z',
@@ -108,6 +116,7 @@
         RUSSIAN_MAP,
         UKRAINIAN_MAP,
         CZECH_MAP,
+        SLOVAK_MAP,
         POLISH_MAP,
         LATVIAN_MAP,
         ARABIC_MAP,
